# ipfce-2024-classroom-assignment-8-285191U013-IPFCE-assignment-8

./: .gitignore  CMakeLists.txt  Makefile  README.md  insertion_sort.c  node.h  queue.c  queue.h  queuetest.c
.devcontainer/: devcontainer.json
tests/: tests.cpp
